Establish basic interface for react pokemon component

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build"
   ],
   "scripts": {
+    "start": "mkdir -p build && ./node_modules/.bin/webpack --watch",
     "build": "mkdir -p build && ./node_modules/.bin/webpack",
     "prepublish": "npm run build",
     "lint": "./node_modules/.bin/eslint lib test",
@@ -41,6 +42,7 @@
     "webpack": "^1.13.1"
   },
   "dependencies": {
+    "pokemon-gif": "^1.0.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0"
   }
