Add specs for PokemonGif component

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,5 @@
 {
-  "parser": "babel-eslint",
-  "extends": "airbnb-base",
+  "extends": "airbnb",
   "env": {
     "browser": true,
     "node": true,
@@ -16,8 +15,6 @@
     "react/jsx-filename-extension": 0,
     "import/imports-first": 0,
     "import/newline-after-import": 0,
-    "new-cap": 0, // Immutable.js constructors
-    "no-confusing-arrow": 0,
     "no-console": 0,
     "comma-dangle": 0,
     "react/prefer-stateless-function": 0
