--- a/package.json
+++ b/package.json
@@ -36,10 +36,13 @@
     "chai": "^3.5.0",
     "enzyme": "^2.4.1",
     "eslint": "^3.2.2",
-    "eslint-config-airbnb-base": "^5.0.1",
-    "eslint-plugin-import": "^1.12.0",
+    "eslint-config-airbnb": "^10.0.0",
+    "eslint-plugin-import": "^1.13.0",
+    "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-react": "^6.0.0",
     "mocha": "^3.0.2",
     "react-addons-test-utils": "^15.3.0",
+    "sinon": "^1.17.5",
     "webpack": "^1.13.1"
   },
   "dependencies": {
