--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-react": "^6.0.0",
     "mocha": "^3.0.2",
     "react-addons-test-utils": "^15.3.0",
+    "react-hot-loader": "^1.3.0",
     "sinon": "^1.17.5",
     "webpack": "^1.13.1"
   },
