--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "author": "Jack R. Zhang <15jzhang@gmail.com>",
   "keywords": [],
-  "main": "build/react-pokemon-gif.bundle",
+  "main": "build/react-pokemon-gif",
   "repository": {
     "type": "git",
     "url": "https://github.com/jackrzhang/react-pokemon-gif"
@@ -20,16 +20,16 @@
     "build"
   ],
   "scripts": {
-    "start": "mkdir -p build && ./node_modules/.bin/webpack --watch",
-    "build": "mkdir -p build && ./node_modules/.bin/webpack",
+    "start": "mkdir -p build && ./node_modules/.bin/babel ./lib --presets es2015,stage-0,react --out-dir ./build --watch",
+    "build": "mkdir -p build && ./node_modules/.bin/babel ./lib --presets es2015,stage-0,react --out-dir ./build",
     "prepublish": "npm run build",
     "lint": "./node_modules/.bin/eslint lib test",
     "test": "./node_modules/.bin/mocha --reporter spec .specsetup.js test/**/*.spec.js"
   },
   "devDependencies": {
+    "babel-cli": "^6.11.4",
     "babel-core": "^6.13.2",
     "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
@@ -43,8 +43,7 @@
     "mocha": "^3.0.2",
     "react-addons-test-utils": "^15.3.0",
     "react-hot-loader": "^1.3.0",
-    "sinon": "^1.17.5",
-    "webpack": "^1.13.1"
+    "sinon": "^1.17.5"
   },
   "dependencies": {
     "pokemon-gif": "^1.0.9",
