--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-pokemon-gif",
   "version": "1.0.0",
-  "description": "",
+  "description": "React component for animated pokemon sprites.",
   "license": "MIT",
   "author": "Jack R. Zhang <15jzhang@gmail.com>",
   "keywords": [],
@@ -30,6 +30,7 @@
     "babel-cli": "^6.11.4",
     "babel-core": "^6.13.2",
     "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
@@ -41,13 +42,14 @@
     "eslint-plugin-jsx-a11y": "^2.1.0",
     "eslint-plugin-react": "^6.0.0",
     "mocha": "^3.0.2",
+    "react": "^15.3.0",
     "react-addons-test-utils": "^15.3.0",
+    "react-dom": "^15.3.0",
     "react-hot-loader": "^1.3.0",
-    "sinon": "^1.17.5"
+    "sinon": "^1.17.5",
+    "webpack": "^1.13.1"
   },
   "dependencies": {
-    "pokemon-gif": "^1.0.9",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "pokemon-gif": "^1.0.9"
   }
 }
