--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "React component for animated pokemon sprites.",
   "license": "MIT",
   "author": "Jack R. Zhang <15jzhang@gmail.com>",
-  "keywords": [],
+  "keywords": [
+    "react",
+    "pokemon",
+    "gif",
+    "sprites",
+    "animated"
+  ],
   "main": "build/react-pokemon-gif",
   "repository": {
     "type": "git",
